--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+    <p id="output">Click it to see the effect in this interface.</p>
 
     <!-- 您也可以此进程中运行其他文件 -->
     <script src="./renderer.js"></script>
